--- a/index.html
+++ b/index.html
@@ -4,32 +4,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Color Sheet </title>
-  <link rel="stylesheet" href="css/all.css">
+  <link rel="stylesheet" href="css/app.css">
   <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/0.7.4/chroma.min.js"></script>
+  <script type='text/javascript' src='js/app.js'></script>
 </head>
 <body>
-  <script>
-  /*  Feature 1: Build a color matrix based on 4 colors and 2 steps */
-  // A: Color Interpolation Between 2 Color Inputs and 1 Step Input
-      // 1:
-      // As I type HEX color value in the input box, the input background change to the color I specified
-
-      // 2:
-      // I have 2 inputs: start and end. Both behave the same as specified in #1.
-
-      // 3:
-      // The system returns 5 colors between start and end colors, using chroma.scale(['start', 'end']).colors(5)
-
-      // 4:
-      // I can specify an integer n (n>0), the system returns n colors between start and end.
-
-  // B: Color Interpolation With 3 Color Inputs and 2 Step Inputs
-      // ...
-
-  // C: Color Interpolation With 4 Color Inputs and 2 Step Inputs (Build a Color Matrix)
-      // ...
-
-  /* Feature 2: ...  */
-  </script>
+  <div id="color-sheet"></div>
 </body>
 </html>
