--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script type='text/javascript' src='js/app.js'></script>
 </head>
 <body>
+  <form name="control" class="control">
+    <output id ="for_rows" for="rows">4</output>
+    <input type="range" name = "rows" id="rows" min="3" max="20" value="6">
+  </form>
   <div id="color-sheet"></div>
 </body>
 </html>
