--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Color Sheet </title>
   <link rel="stylesheet" href="css/app.css">
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/1.1.1/chroma.min.js"></script>
-  <script type='text/javascript' src='js/app.js'></script>
+  <script src="js/d3-jetpack.js"></script>
 </head>
 <body>
   <form name="control" class="control">
@@ -13,5 +14,7 @@
     <input type="range" name = "rows" id="rows" min="3" max="20" value="6">
   </form>
   <div id="color-sheet"></div>
+
+  <script type='text/javascript' src='js/app.js'></script>
 </body>
 </html>
