--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/0.7.4/chroma.min.js"></script>
 </head>
 <body>
+  <h1>Welcome to my page!</h1>
   <script>
   /*  Feature 1: Build a color matrix based on 4 colors and 2 steps */
   // A: Color Interpolation Between 2 Color Inputs and 1 Step Input
