--- a/index.html
+++ b/index.html
@@ -9,11 +9,38 @@
   <script src="js/d3-jetpack.js"></script>
 </head>
 <body>
-  <form name="control" class="control">
-    <output id ="for_rows" for="rows">4</output>
-    <input type="range" name = "rows" id="rows" min="3" max="20" value="6">
-  </form>
-  <div id="color-sheet"></div>
+  <table id="control">
+    <tbody>
+      <tr>
+        <td rowspan="2">
+          <output id ="for_columns" for="columns">3</output>
+          <input orient="vertical" type="range" name = "columns" id="columns" min="3" max="20" value="3">
+        </td>
+        <td>
+          <input type="text" value="#FF9AFA">
+        </td>
+        <td>
+          <input type="text" value="#A175FF">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <input type="text" value="#A175FF">
+        </td>
+        <td>
+          <input type="text" value="#001888">
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td colspan="2">
+          <output id ="for_rows" for="rows">3</output>
+          <input type="range" name = "rows" id="rows" min="3" max="20" value="3">
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <table id="color-sheet"></table>
 
   <script type='text/javascript' src='js/app.js'></script>
 </body>
