UI update: allow the initial 4 color inputs to update the input background color

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
           <output id ="for_columns" for="columns">3</output>
           <input orient="vertical" type="range" name = "columns" id="columns" min="3" max="20" value="3">
         </td>
-        <td>
-          <input type="text" value="#FF9AFA">
+        <td class="color-input">
+          <input id="color1" type="text" value="FF9AFA" size="6">
         </td>
-        <td>
-          <input type="text" value="#A175FF">
+        <td class="color-input">
+          <input id="color2" type="text" value="A175FF" size="6">
         </td>
       </tr>
       <tr>
-        <td>
-          <input type="text" value="#A175FF">
+        <td class="color-input">
+          <input id="color3" type="text" value="333456" size="6">
         </td>
-        <td>
-          <input type="text" value="#001888">
+        <td class="color-input">
+          <input id="color4" type="text" value="001888" size="6">
         </td>
       </tr>
       <tr>
