--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <tbody>
       <tr>
         <td rowspan="2">
-          <output id ="for_columns" for="columns">3</output>
-          <input orient="vertical" type="range" name = "columns" id="columns" min="2" max="20" value="3">
+          <output id ="for_rows" for="rows">3</output>
+          <input orient="vertical" type="range" name = "rows" id="rows" min="2" max="20" value="3">
         </td>
         <td class="color-input">
           <input id="color1" type="text" value="FF9AFA" size="6">
@@ -35,12 +35,14 @@
       <tr>
         <td></td>
         <td colspan="2">
-          <output id ="for_rows" for="rows">3</output>
-          <input type="range" name = "rows" id="rows" min="2" max="20" value="3">
+          <output id ="for_columns" for="columns">3</output>
+          <input type="range" name = "columns" id="columns" min="2" max="20" value="3">
         </td>
       </tr>
     </tbody>
   </table>
+  <input id="show_text" type="checkbox" checked="true">
+  <label for="show_text">Show Color Values</label>
 
   <script type='text/javascript' src='js/app.js'></script>
 </body>
