--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <input orient="vertical" type="range" name = "rows" id="rows" min="2" max="20" value="3">
         </td>
         <td class="color-input">
-          <input id="color1" type="text" value="FF9AFA" size="6">
+          <input id="color1" type="text" value="FFA666" size="6">
         </td>
         <td class="color-input">
           <input id="color2" type="text" value="A175FF" size="6">
@@ -43,6 +43,9 @@
   </table>
   <input id="show_text" type="checkbox" checked="true">
   <label for="show_text">Show Color Values</label>
+  <p>
+    Color Worksheet Built with <a href="http://gka.github.io/chroma.js/" target="_blank">Chroma.js API</a>.
+  </p>
 
   <script type='text/javascript' src='js/app.js'></script>
 </body>
