--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
       </tr>
     </tbody>
   </table>
+  <div class="ui">
   <input id="show_text" type="checkbox" checked="true">
   <label for="show_text">Show Color Values</label>
-  <p>
-    Color Worksheet Built with <a href="http://gka.github.io/chroma.js/" target="_blank">Chroma.js API</a>.
+  </div>
+  <div class ="info">
+      <p>
+    A Cartesian solution for people who are bad at picking colors 😜, built with <a href="http://gka.github.io/chroma.js/" target="_blank">Chroma.js API</a>.
   </p>
+    <p>A  nifty tool for palette designers who needs to quickly find out Hex values of the blending colors. Using the control box to the left, you can first define the values of the four corners, and then provide the steps you want on the vertical and horizontal axes. The sheet will provide the color values in between.</p>
+  </div>
+
 
   <script type='text/javascript' src='js/app.js'></script>
 </body>
