--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <table id="color-sheet"></table>
-  <div class="wrapper">
-    <div class="ui">
+  <div class="wrapper" style="display: flext; gap: 2rem; padding: 1rem">
+    <div class="ui" style="min-width: 300px;">
       <table id="control">
         <tbody>
           <tr>
