--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <table id="color-sheet"></table>
-  <div class="wrapper" style="display: flext; gap: 2rem; padding: 1rem">
+  <div class="wrapper" style="display: flex; gap: 2rem; padding: 1rem">
     <div class="ui" style="min-width: 300px;">
       <table id="control">
         <tbody>
@@ -51,7 +51,7 @@
         <p>
       A Cartesian solution for people who are bad at picking colors 😜, built with <a href="http://gka.github.io/chroma.js/" target="_blank">Chroma.js API</a>.
     </p>
-      <p>A  nifty tool for palette designers who needs to quickly find out Hex values of the blending colors. Using the control box to the left, you can first define the values of the four corners, and then provide the steps you want on the vertical and horizontal axes. The sheet will provide the color values in between.</p>
+      <p>Or: a  nifty tool for palette designers who needs to quickly find out Hex values of the blending colors. Using the control box to the left, you can first define the values of the four corners, and then provide the steps you want on the vertical and horizontal axes. The sheet will provide the color values in between.</p>
     </div>
 
   </div>
